syntax = "proto3";

service NetworkAPI {
  rpc ProcessRequest (RequestMessage) returns (ResponseMessage);
}

message RequestMessage {
  string request_data = 1;
}

message ResponseMessage {
  string response_data = 1;
}
